# one-pace-assistant

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/onepace_assistant/: __init__.py  __main__.py  cli.py  downloader.py  models.py  nfo.py  poster_utils.py  scraper.py  syncer.py
tests/: test_cli_integration.py  test_downloader.py  test_models.py  test_nfo.py  test_poster_utils.py  test_scraper.py  test_syncer.py
